--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <p>Browse student-led skills and connect with providers who match your goals.</p>
             <button class="primary-btn" id="browseBtn">Browse Skills</button>
         </section>
+        <section>
+            <h2>Browse by Category</h2>
+            <p>Coming soon: filter skills by category and availability.</p>
+        </section>
 
         <section class="content">
             <h2>Featured Skills</h2>
